# aet

./: .gitignore  AET_product_spec.md  AGENTS.md  Cargo.toml  DECISIONS.md  README.md  WORKER_BRIEF.md
crates/aet-anki/: Cargo.toml
crates/aet-anki/src/: lib.rs
crates/aet-cli/: Cargo.toml
crates/aet-cli/src/: commands.rs  main.rs
crates/aet-cli/tests/: build_round_trip.rs
crates/aet-core/: Cargo.toml
crates/aet-core/src/: lib.rs  models.rs  validator.rs
crates/aet-typst/: Cargo.toml
crates/aet-typst/src/: lib.rs
data/articles/dengue-bangladesh/: article.toml  vocab.csv
data/articles/vietnam-two-child-policy/: article.toml  vocab.csv
