[workspace]
members = [
    "crates/aet-core",
    "crates/aet-anki",
    "crates/aet-typst",
    "crates/aet-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Thanh Tu Do"]
license = "MIT"
publish = false

[workspace.dependencies]
# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Data parsing / serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4.0"
toml = "1.1.2+spec-1.1.0"

# CLI
clap = { version = "4.6.1", features = ["derive"] }